add license, bump version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svelte-chessground",
-	"version": "0.0.1",
+	"version": "0.0.2",
+	"license": "GPL-3.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
