--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "svelte-chessground",
+	"description": "Svelte chessboard component. A Svelte wrapper for the full-featured Chessground chess UI.",
 	"version": "0.0.4",
 	"license": "GPL-3.0",
 	"scripts": {
