--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"chessground",
 		"chessboard"
 	],
-	"version": "0.2.2",
+	"version": "0.2.3",
 	"license": "GPL-3.0",
 	"scripts": {
 		"dev": "vite dev",
@@ -16,7 +16,8 @@
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"lint": "eslint ."
 	},
 	"exports": {
 		".": {
@@ -34,6 +35,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.15.1",
 		"@sveltejs/package": "^2.0.0",
+		"eslint-plugin-svelte3": "^4.0.0",
 		"publint": "^0.1.9",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
