--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.15.1",
 		"@sveltejs/package": "^2.0.0",
+		"eslint-plugin-jsdoc": "^40.1.2",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"publint": "^0.1.9",
 		"svelte": "^3.54.0",
