--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"chessground",
 		"chessboard"
 	],
-	"version": "0.2.4",
+	"version": "0.2.5",
 	"license": "GPL-3.0",
+	"homepage": "https://github.com/gtim/svelte-chessground#readme",
+	"bugs": "https://github.com/gtim/svelte-chessground/issues",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
