--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
 		"chessground",
 		"chessboard"
 	],
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"license": "GPL-3.0",
 	"homepage": "https://github.com/gtim/svelte-chessground#readme",
 	"bugs": "https://github.com/gtim/svelte-chessground/issues",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && npm run package",
+		"build": "perl generate_unstyled.pl && vite build && npm run package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
